--- a/.github/ISSUE_TEMPLATE/report-problem.yml
+++ b/.github/ISSUE_TEMPLATE/report-problem.yml
@@ -1,5 +1,5 @@
 name: Bug report
-description: Report an issue with the modpack in its unmodified state. For other issues, use Discord.
+description: Report an issue with the modpack in its unmodified state.
 labels: bug
 body:
 - type: markdown
@@ -38,7 +38,7 @@ body:
   attributes:
     label: Confirm
     options:
-      - label: This bug report is about an issue with the modpack itself, I have not modified the mods nor added any resource packs. If this is not the case, I know that I should post the issue to modpack's Discord support channel instead.
+      - label: This bug report is about an issue with the modpack itself, I have not modified the mods or added any resource packs.
         required: true
     
 - type: textarea
