--- a/versions/1.20.4/yosbr/config/capes.json5
+++ b/versions/1.20.4/yosbr/config/capes.json5
@@ -1,1 +1,10 @@
-{"clientCapeType":"MINECRAFTCAPES","enableOptifine":true,"enableLabyMod":true,"enableWynntils":true,"enableMinecraftCapesMod":true,"enableCosmetica":true,"enableCloaksPlus":true,"enableElytraTexture":true}
+{
+  "clientCapeType": "MINECRAFTCAPES",
+  "enableOptifine": true,
+  "enableLabyMod": false,
+  "enableWynntils": false,
+  "enableMinecraftCapesMod": true,
+  "enableCosmetica": false,
+  "enableCloaksPlus": true,
+  "enableElytraTexture": true
+}
