--- a/versions/1.20.4/yosbr/config/fabrishot.properties
+++ b/versions/1.20.4/yosbr/config/fabrishot.properties
@@ -1,9 +1,11 @@
+#Fabrishot screenshot config
+#Wed May 29 12:58:09 EEST 2024
 custom_file_name=%time%_4K
-hide_hud=false
-override_screenshot_key=false
-save_file=true
-disable_gui_scaling=false
-width=3840
-height=2160
 delay=3
+disable_gui_scaling=false
 file_format=PNG
+height=2160
+hide_hud=false
+override_screenshot_key=true
+save_file=true
+width=3840
