--- a/early-versions/1.20.6/resourcepacks/translations-for-sodium.pw.toml
+++ b/early-versions/1.20.6/resourcepacks/translations-for-sodium.pw.toml
@@ -3,11 +3,11 @@ filename = "SodiumTranslations.zip"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/yfDziwn1/versions/WTOnCddm/SodiumTranslations.zip"
+url = "https://cdn.modrinth.com/data/yfDziwn1/versions/Ff3iLzwK/SodiumTranslations.zip"
 hash-format = "sha1"
-hash = "ed45afa73abcbd5347ea54ee805b45682ed689ab"
+hash = "156e1fa6c968cd2c613a19fd2a687f724d761873"
 
 [update]
 [update.modrinth]
 mod-id = "yfDziwn1"
-version = "WTOnCddm"
+version = "Ff3iLzwK"
