--- a/early-versions/1.21/resourcepacks/translations-for-sodium.pw.toml
+++ b/early-versions/1.21/resourcepacks/translations-for-sodium.pw.toml
@@ -3,11 +3,11 @@ filename = "SodiumTranslations.zip"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/yfDziwn1/versions/UW7rbLDl/SodiumTranslations.zip"
+url = "https://cdn.modrinth.com/data/yfDziwn1/versions/7VuVdb3P/SodiumTranslations.zip"
 hash-format = "sha1"
-hash = "5c7dabecd03aa15da7302828113b7082a93dac02"
+hash = "7fea77e9339532ce280e84de9fc9e5e327540c07"
 
 [update]
 [update.modrinth]
 mod-id = "yfDziwn1"
-version = "UW7rbLDl"
+version = "7VuVdb3P"
