--- a/early-versions/1.20.6/resourcepacks/translations-for-sodium.pw.toml
+++ b/early-versions/1.20.6/resourcepacks/translations-for-sodium.pw.toml
@@ -3,11 +3,11 @@ filename = "SodiumTranslations.zip"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/yfDziwn1/versions/Ff3iLzwK/SodiumTranslations.zip"
+url = "https://cdn.modrinth.com/data/yfDziwn1/versions/7VuVdb3P/SodiumTranslations.zip"
 hash-format = "sha1"
-hash = "156e1fa6c968cd2c613a19fd2a687f724d761873"
+hash = "7fea77e9339532ce280e84de9fc9e5e327540c07"
 
 [update]
 [update.modrinth]
 mod-id = "yfDziwn1"
-version = "Ff3iLzwK"
+version = "7VuVdb3P"
