--- a/early-versions/1.21/mods/rrls.pw.toml
+++ b/early-versions/1.21/mods/rrls.pw.toml
@@ -1,13 +1,13 @@
 name = "Remove Reloading Screen"
-filename = "rrls-5.0.5+mc1.21-fabric.jar"
+filename = "rrls-5.0.6+mc1.21-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/ZP7xHXtw/versions/l63T4mAS/rrls-5.0.5%2Bmc1.21-fabric.jar"
+url = "https://cdn.modrinth.com/data/ZP7xHXtw/versions/5lHkKZ2K/rrls-5.0.6%2Bmc1.21-fabric.jar"
 hash-format = "sha1"
-hash = "681ebba52d304560800cfd705bbe906168bd44ea"
+hash = "70f306764c0cfe3adb033cf22fa019b66e8172a5"
 
 [update]
 [update.modrinth]
 mod-id = "ZP7xHXtw"
-version = "l63T4mAS"
+version = "5lHkKZ2K"
