--- a/Modrinth/1.21/pack.toml
+++ b/Modrinth/1.21/pack.toml
@@ -1,6 +1,6 @@
-name = "Vanilla Optimized"
+name = "Vortexial Optimized"
 author = "chizusrevenge"
-version = "2.9.4-beta"
+version = "2.9.5-beta"
 pack-format = "packwiz:1.1.0"
 
 [index]
