--- a/Modrinth/1.21.1/mods/fabric-api.pw.toml
+++ b/Modrinth/1.21.1/mods/fabric-api.pw.toml
@@ -1,14 +1,13 @@
 name = "Fabric API"
-filename = "fabric-api-0.100.8+1.21.jar"
+filename = "fabric-api-0.102.1+1.21.1.jar"
 side = "both"
-pin = true
 
 [download]
-url = "https://cdn.modrinth.com/data/P7dR8mSH/versions/iS2jNAxk/fabric-api-0.100.8%2B1.21.jar"
+url = "https://cdn.modrinth.com/data/P7dR8mSH/versions/bK6OgzFj/fabric-api-0.102.1%2B1.21.1.jar"
 hash-format = "sha1"
-hash = "8dfd41063b083147653ae8ab6699d93c22f8411f"
+hash = "c7d381d76c22ada6679ef9683da9384751db3874"
 
 [update]
 [update.modrinth]
 mod-id = "P7dR8mSH"
-version = "iS2jNAxk"
+version = "bK6OgzFj"
