--- a/Modrinth/1.21/mods/polytone.pw.toml
+++ b/Modrinth/1.21/mods/polytone.pw.toml
@@ -1,13 +1,13 @@
 name = "Polytone"
-filename = "polytone-1.21-2.2.9-fabric.jar"
+filename = "polytone-1.21-2.3.5-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/3qAYkBMB/versions/9e7Ie3DE/polytone-1.21-2.2.9-fabric.jar"
+url = "https://cdn.modrinth.com/data/3qAYkBMB/versions/YM6xKpJc/polytone-1.21-2.3.5-fabric.jar"
 hash-format = "sha1"
-hash = "a084ffa1b03ab6f320846fa1929529f22aa2e7b5"
+hash = "980a353d4d5a8bc16ff513d68d3e15ddd2013285"
 
 [update]
 [update.modrinth]
 mod-id = "3qAYkBMB"
-version = "9e7Ie3DE"
+version = "YM6xKpJc"
