Update 2.1.2-alpha for 1.21.1

--- a/Modrinth/1.21.1/resourcepacks/chat-reporting-helper.pw.toml
+++ b/Modrinth/1.21.1/resourcepacks/chat-reporting-helper.pw.toml
@@ -3,11 +3,11 @@ filename = "Chat Reporting Helper.zip"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/tN4E9NfV/versions/uuFCWOo8/Chat%20Reporting%20Helper.zip"
+url = "https://cdn.modrinth.com/data/tN4E9NfV/versions/J0KYExHn/Chat%20Reporting%20Helper.zip"
 hash-format = "sha1"
-hash = "ad66a1ce20124be9569b5a5820aec6794acda698"
+hash = "2c53913ef184590306f87d7d74926e58cd120a45"
 
 [update]
 [update.modrinth]
 mod-id = "tN4E9NfV"
-version = "uuFCWOo8"
+version = "J0KYExHn"
