--- a/Modrinth/1.21.1/mods/polytone.pw.toml
+++ b/Modrinth/1.21.1/mods/polytone.pw.toml
@@ -1,13 +1,13 @@
 name = "Polytone"
-filename = "polytone-1.21-2.3.5-fabric.jar"
+filename = "polytone-1.21-2.3.8-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/3qAYkBMB/versions/YM6xKpJc/polytone-1.21-2.3.5-fabric.jar"
+url = "https://cdn.modrinth.com/data/3qAYkBMB/versions/1u2zTh7G/polytone-1.21-2.3.8-fabric.jar"
 hash-format = "sha1"
-hash = "980a353d4d5a8bc16ff513d68d3e15ddd2013285"
+hash = "b0c4b0bae470768f888b0e69617d0f40884f956a"
 
 [update]
 [update.modrinth]
 mod-id = "3qAYkBMB"
-version = "YM6xKpJc"
+version = "1u2zTh7G"
