--- a/Modrinth/1.21.1/mods/vmp-fabric.pw.toml
+++ b/Modrinth/1.21.1/mods/vmp-fabric.pw.toml
@@ -1,13 +1,13 @@
 name = "Very Many Players (Fabric)"
-filename = "vmp-fabric-mc1.21-0.2.0+beta.7.164-all.jar"
+filename = "vmp-fabric-mc1.21.1-0.2.0+beta.7.167-all.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/wnEe9KBa/versions/BkKRFQ3P/vmp-fabric-mc1.21-0.2.0%2Bbeta.7.164-all.jar"
+url = "https://cdn.modrinth.com/data/wnEe9KBa/versions/Zf4JROY5/vmp-fabric-mc1.21.1-0.2.0%2Bbeta.7.167-all.jar"
 hash-format = "sha1"
-hash = "4e011e25226111924eb594a21615ed5bc6f14c96"
+hash = "5e4f9f4092ce25adfa9072a0fc1afbb6de4ea0fb"
 
 [update]
 [update.modrinth]
 mod-id = "wnEe9KBa"
-version = "BkKRFQ3P"
+version = "Zf4JROY5"
